<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity2Register">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="164dp"
        android:layout_height="147dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tite" />

    <EditText
        android:id="@+id/fistname"
        android:layout_width="22mm"
        android:layout_height="5mm"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:autofillHints="yes"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="22mm"
        android:layout_height="5mm"
        android:layout_marginStart="164dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/surname"
        android:inputType="textPersonName"

        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/suffix"
        android:layout_width="10mm"
        android:layout_height="5mm"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/suffix"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="58mm"
        android:layout_height="5mm"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email_address"
        android:inputType="textPersonName"

        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname" />

    <EditText
        android:id="@+id/editTextTextUsername"
        android:layout_width="58mm"
        android:layout_height="5mm"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/rePassword2"
        android:layout_width="58mm"
        android:layout_height="5mm"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"

        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/Register2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="58mm"
        android:layout_height="5mm"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/rePassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="InOrMmUsage,TextFields" />

    <Button
        android:id="@+id/Register2"
        android:layout_width="30mm"
        android:layout_height="5mm"
        android:layout_marginBottom="44dp"
        android:background="@drawable/border"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/datepickerbutton"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="opendatepicker"
        android:text="Jan 12 2022"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress"
        tools:ignore="HardcodedText" />

    <CheckBox
        android:id="@+id/Female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="184dp"
        android:text="@string/female"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datepickerbutton" />

    <CheckBox
        android:id="@+id/Male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="100dp"
        android:text="@string/male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datepickerbutton" />

    <TextView
        android:id="@+id/textBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/birthday"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/gender"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBirthday"
        tools:ignore="SpUsage" />




</androidx.constraintlayout.widget.ConstraintLayout>